refactor: remove advanced wallet mode (#443)
* refactor: remove advanced wallet mode

* fix: tests

* fix: remove remaining traced of advanced mode

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -118,23 +118,7 @@
     "jar_tooltip": "Look inside",
     "jar_tooltip_empty_jar_0": "Receive",
     "jars_title": "Wallet distribution",
-    "jars_title_popover": "Jars are used to segregate your sats into multiple buckets that are disconnected from each other, which aids privacy."
-  },
-  "current_wallet_advanced": {
-    "error_loading_utxos_failed": "Loading UTXOs failed.",
-    "title_fidelity_bonds": "Fidelity Bonds",
-    "button_show_utxos": "Show UTXOs",
-    "button_hide_utxos": "Hide UTXOs",
-    "alert_no_utxos": "No UTXOs available.",
-    "account": "Jar",
-    "error_freeze_failed": "Request failed.",
-    "label_locked_until": "Locked until",
-    "label_frozen": "frozen",
-    "label_unconfirmed": "unconfirmed",
-    "button_freeze": "freeze",
-    "button_unfreeze": "unfreeze",
-    "account_button_send": "Send",
-    "account_button_receive": "Receive",
+    "jars_title_popover": "Jars are used to segregate your sats into multiple buckets that are disconnected from each other, which aids privacy.",
     "account_heading_external_addresses": "External addresses for deposits",
     "account_heading_internal_addresses": "Internal Addresses"
   },
@@ -148,8 +132,6 @@
     "use_btc": "Display amounts in bitcoin",
     "use_dark_theme": "Switch to dark theme",
     "use_light_theme": "Switch to light theme",
-    "use_normal_mode": "Use normal wallet mode",
-    "use_dev_mode": "Use developer wallet mode",
     "text_help_translate": "Missing your language? Help us out!",
     "show_seed": "Show seed phrase",
     "hide_seed": "Hide seed phrase",
@@ -190,9 +172,7 @@
     "placeholder_recipient": "Enter address or choose jar from wallet...",
     "feedback_reused_address": "This address is already used. To preserve your privacy please choose another one.",
     "label_account": "Send from",
-    "label_account_dev_mode": "Account to send from",
     "account_selector_option": "Jar {{ number }}",
-    "account_selector_option_dev_mode": "Account {{ number }}",
     "label_amount": "Amount in sats",
     "placeholder_amount": "Enter amount...",
     "feedback_invalid_amount": "Please provide a valid amount.",
