dev: improved sweep text in confirm modal

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -191,6 +191,8 @@
     "confirm_modal": {
       "title": "Confirm payment",
       "label_amount": "Amount",
+      "text_sweep_balance": "Sweep whole jar (approx. <1></1>)",
+      "text_sweep_info_popover": "The exact transaction amount can only be calculated by JoinMarket at the point when the transaction is made.",
       "label_recipient": "Recipient",
       "label_num_collaborators": "Collaborators",
       "text_collaborative_tx_enabled": "Payment with privacy improvement",
