--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -364,11 +364,15 @@
   },
   "orderbook": {
     "title": "Orderbook",
-    "text_orderbook_summary": "{{ orderCount }} orders found by {{ counterpartyCount }} counterparties",
+    "text_orderbook_summary": "{{ orderCount }} orders by {{ counterpartyCount }} counterparties",
+    "text_orderbook_summary_filtered": "found {{ orderCount }} orders by {{ counterpartyCount }} counterparties",
     "alert_empty_orderbook": "Orderbook is empty",
     "error_loading_orderbook_failed": "Error while loading the orderbook. Your current local setup might not support fetching the orderbook. Reason: {{ reason }}",
     "text_offer_type_absolute": "absolute",
     "text_offer_type_relative": "relative",
+    "label_search": "Search",
+    "placeholder_search": "Search",
+    "text_orderbook_filter_count": "{{ filterCount }} entries match given search criteria",
     "table": {
       "heading_type": "Type",
       "heading_counterparty": "Counterparty",
