--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -257,12 +257,25 @@
       "placeholder_search": "Search",
       "heading_timestamp": "Timestamp",
       "heading_cj_amount": "Transaction Amount",
-      "heading_input_count": "No. of inputs by me",
+      "heading_input_count": "Inputs by me",
       "heading_input_value": "Amount input by me",
       "heading_cj_fee": "CoinJoin Fee",
       "heading_earned": "Earned",
       "heading_confirm_time": "Confirmation Time (mins)",
-      "heading_notes": "Notes"
+      "heading_notes": "Notes",
+      "pagination": {
+        "items_per_page": {
+          "label": "Items per page",
+          "text_option_show_all": "All"
+        },
+        "page_selector": {
+          "label": "Page",
+          "label_first": "First",
+          "label_previous": "Previous",
+          "label_next": "Next",
+          "label_last": "Last"
+        }
+      }
     },
     "title_fidelity_bonds": "Create a Fidelity Bond",
     "title_fidelity_bond_exists": "Your Fidelity Bonds",
