--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -249,13 +249,18 @@
     "button_show_orderbook": "Show orderbook",
     "report": {
       "title": "Earnings Report",
+      "text_report_summary_one": "{{ count }} entry",
+      "text_report_summary_other": "{{ count }} entries",
+      "text_report_summary_filtered_one": "found {{ count }} entry",
+      "text_report_summary_filtered_other": "found {{ count }} entries",
+      "label_search": "Search",
+      "placeholder_search": "Search",
       "heading_timestamp": "Timestamp",
       "heading_cj_amount": "Transaction Amount",
-      "heading_input_count": "No. of UTXOs input by me",
-      "heading_input_value": "Amount input by me",
+      "heading_input_count": "My Inputs",
+      "heading_input_value": "My Input Amount",
       "heading_cj_fee": "CoinJoin Fee",
       "heading_earned": "Earned",
-      "heading_confirm_time": "Confirmation Time (mins)",
       "heading_notes": "Notes"
     },
     "title_fidelity_bonds": "Create a Fidelity Bond",
