--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -269,8 +269,9 @@
       "heading_earned": "Earned",
       "heading_notes": "Notes"
     },
-    "title_fidelity_bonds": "Create a Fidelity Bond",
-    "title_fidelity_bond_exists": "Your Fidelity Bonds",
+    "title_fidelity_bonds_zero": "Create a Fidelity Bond",
+    "title_fidelity_bonds_one": "Your Fidelity Bond",
+    "title_fidelity_bonds_other": "Your Fidelity Bonds",
     "subtitle_fidelity_bonds": "A fidelity bond is a long-term deposit that makes cryptographic identities deliberately costly. By cryptographically locking up funds for a specific duration, you signal that you are a serious market participant and increase the chance of your offers being taken.",
     "fidelity_bond": {
       "error_freezing_utxos": "Could not freeze UTXOs.",
