--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -388,6 +388,7 @@
     "label_search": "Search",
     "placeholder_search": "Search",
     "text_orderbook_filter_count": "{{ filterCount }} entries match given search criteria",
+    "label_highlight_own_orders": "Highlight my orders",
     "table": {
       "heading_type": "Type",
       "heading_counterparty": "Counterparty",
