Revert "review: remove joining icon from navbar"
This reverts commit de86014d030682baf947d9591311ef37fc6c55c2.

--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -5,6 +5,7 @@
     "tab_send": "Envoyer",
     "tab_receive": "Recevoir",
     "tab_earn": "Générer",
+    "joining_in_progress": "Joindre",
     "menu_mobile": "Menu",
     "menu_mobile_settings": "Réglages"
   },
