feat: rename "Joining" to "Jamming"

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -16,7 +16,7 @@
     "tab_send": "Send",
     "tab_receive": "Receive",
     "tab_earn": "Earn",
-    "joining_in_progress": "Joining",
+    "joining_in_progress": "Jamming",
     "menu_mobile": "Menu",
     "menu_mobile_settings": "Settings"
   },
