--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -5,7 +5,7 @@
     "tab_send": "Envoyer",
     "tab_receive": "Recevoir",
     "tab_earn": "Générer",
-    "joining_in_progress": "Joindre",
+    "joining_in_progress": "Brouillage",
     "menu_mobile": "Menu",
     "menu_mobile_settings": "Réglages"
   },
