--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -397,7 +397,7 @@
     "text_orderbook_summary_one": "{{ count }} order by {{ counterpartyCount }} conterparty",
     "text_orderbook_summary_other": "{{ count }} orders by {{ counterpartyCount }} conterparties",
     "text_orderbook_summary_filtered_one": "found {{ count }} order by {{ counterpartyCount }} conterparty",
-    "text_orderbook_summary_filtered_other": "found {{ count }} order by {{ counterpartyCount }} conterparty",
+    "text_orderbook_summary_filtered_other": "found {{ count }} orders by {{ counterpartyCount }} conterparties",
     "alert_empty_orderbook": "Orderbook is empty",
     "error_loading_orderbook_failed": "Error while loading the orderbook. Your current local setup might not support fetching the orderbook. Reason: {{ reason }}",
     "text_offer_type_absolute": "absolute",
