--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -246,6 +246,14 @@
     "text_stopping": "Stopping",
     "button_show_report": "Show earnings report",
     "button_show_orderbook": "Show orderbook",
+    "current": {
+      "text_cjfee": "Fee",
+      "text_minsize": "Minimum Size",
+      "text_maxsize": "Maximum Size",
+      "text_txfee": "Transaction Fee",
+      "text_offer_type_absolute": "absolute",
+      "text_offer_type_relative": "relative"
+    },
     "report": {
       "title": "Earnings Report",
       "text_report_summary_one": "{{ count }} entry",
@@ -261,8 +269,9 @@
       "heading_earned": "Earned",
       "heading_notes": "Notes"
     },
-    "title_fidelity_bonds": "Create a Fidelity Bond",
-    "title_fidelity_bond_exists": "Your Fidelity Bonds",
+    "title_fidelity_bonds_zero": "Create a Fidelity Bond",
+    "title_fidelity_bonds_one": "Your Fidelity Bond",
+    "title_fidelity_bonds_other": "Your Fidelity Bonds",
     "subtitle_fidelity_bonds": "A fidelity bond is a long-term deposit that makes cryptographic identities deliberately costly. By cryptographically locking up funds for a specific duration, you signal that you are a serious market participant and increase the chance of your offers being taken.",
     "fidelity_bond": {
       "error_freezing_utxos": "Could not freeze UTXOs.",
