--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -428,16 +428,14 @@
   },
   "scheduler": {
     "title": "Jam Scheduler (Experimental)",
-    "subtitle": "Execute multiple transactions using random amounts and time intervals to increase the privacy of yourself and others. Every scheduled transaction is a collaborative transaction. The scheduler will use all available funds that aren't frozen.",
+    "subtitle": "Execute multiple transactions using random amounts and time intervals to increase the privacy of yourself and others. Every scheduled transaction is a collaborative transaction.",
     "error_starting_schedule_failed": "Starting the scheduler failed.",
     "error_stopping_schedule_failed": "Stopping the scheduler failed.",
     "complete_wallet_title": "Complete Wallet",
     "complete_wallet_subtitle": "This will use all of your non-frozen funds.",
-    "description_destination_addresses": "You can choose to send your funds to an external wallet after completion automatically. However, this feature requires you to provide multiple destination addresses to preserve your privacy.",
+    "description_destination_addresses": "The scheduler will send all available funds to multiple destinations, splitting them up in random chunks.",
     "feedback_invalid_destination_address": "Please enter valid a destination address.",
     "feedback_reused_destination_address": "This address is already used. To preserve your privacy please choose another one.",
-    "toggle_internal_destination_title": "Send to external wallet",
-    "toggle_internal_destination_subtitle": "Specify destination addresses to send funds to an external wallet.",
     "label_destination_input": "Destination {{ destination }}",
     "placeholder_destination_input": "Enter destination address...",
     "description_fees": "The scheduler will pay all occurring fees automatically.",
