feat(scheduler): Jam Scheduler -> Scheduled Sweep

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -432,7 +432,7 @@
     }
   },
   "scheduler": {
-    "title": "Jam Scheduler (Experimental)",
+    "title": "Scheduled Sweep (Experimental)",
     "subtitle": "Execute multiple transactions using random amounts and time intervals to increase the privacy of yourself and others. Every scheduled transaction is a collaborative transaction.",
     "error_starting_schedule_failed": "Starting the scheduler failed.",
     "error_stopping_schedule_failed": "Stopping the scheduler failed.",
