--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -31,6 +31,7 @@
     "tab_send": "Send",
     "tab_receive": "Receive",
     "tab_earn": "Earn",
+    "tab_sweep": "Sweep",
     "joining_in_progress": "Jamming",
     "menu_mobile": "Menu",
     "menu_mobile_settings": "Settings"
