--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -398,7 +398,7 @@
       "title": "<0>Earn</0> sats by providing liquidity.",
       "description": "Offer liquidity to the marketplace for a fee. No trust or custody required—you are always in full control of your funds."
     },
-    "item_5": {
+    "send": {
       "title": "<0>Send</0> a collaborative transaction to yourself.",
       "description": "Collaborative transactions increase the privacy of yourself and others."
     },
