review: fix wording
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -224,8 +224,8 @@
       "hint_missing_utxos": "To execute a collaborative transaction you need UTXOs with {{ minConfirmations }} or more confirmations in the source jar. $t(send.coinjoin_precondition.nested_hint_fund_jar, {\"count\": {{ minConfirmations }} })",
       "hint_missing_confirmations": "A collaborative transaction requires your UTXOs to have {{ minConfirmations }} or more confirmations. $t(send.coinjoin_precondition.nested_hint_wait_for_block, {\"count\": {{ amountOfMissingConfirmations }} })",
       "hint_missing_retries": "Failed at sourcing commitments for this jar too many times in a row. For security reasons, you need a fresh UTXO in the jar to try again. See <1>the docs</1> for more information.",
-      "hint_missing_retries_detail_one": "The following utxo has been used unsuccessfully too many times and cannot be reused: <1></1>",
-      "hint_missing_retries_detail_other": "The following {{ count }} utxos have been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "hint_missing_retries_detail_one": "The following UTXO has been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "hint_missing_retries_detail_other": "The following {{ count }} UTXOs have been used unsuccessfully too many times and cannot be reused: <1></1>",
       "nested_hint_wait_for_block": "Select another jar to send from or wait for one more block.",
       "nested_hint_wait_for_block_other": "Select another jar to send from or wait for {{ count }} more blocks.",
       "nested_hint_fund_jar": "Select another jar to send from or fund this jar and wait for one block.",
@@ -462,8 +462,8 @@
       "hint_missing_utxos": "To run the scheduler you need UTXOs with {{ minConfirmations }} or more confirmations. $t(scheduler.precondition.nested_hint_fund_wallet, {\"count\": {{ minConfirmations }} })",
       "hint_missing_confirmations": "The scheduler requires your UTXOs to have {{ minConfirmations }} or more confirmations. $t(scheduler.precondition.nested_hint_wait_for_block, {\"count\": {{ amountOfMissingConfirmations }} })",
       "hint_missing_retries": "Failed at sourcing commitments too many times. For security reasons, you need a fresh UTXO in the jar to try again. See <1>the docs</1> for more information.",
-      "hint_missing_retries_detail_one": "The following utxo has been used unsuccessfully too many times and cannot be reused: <1></1>",
-      "hint_missing_retries_detail_other": "The following {{ count }} utxos have been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "hint_missing_retries_detail_one": "The following UTXO has been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "hint_missing_retries_detail_other": "The following {{ count }} UTXOs have been used unsuccessfully too many times and cannot be reused: <1></1>",
       "nested_hint_wait_for_block": "Wait for one more block.",
       "nested_hint_wait_for_block_other": "Wait for {{ count }} more blocks.",
       "nested_hint_fund_wallet": "Fund your wallet and wait for one more block.",
