feat(taker): ability to abort single collaborative transaction

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -6,6 +6,7 @@
     "next": "Next",
     "back": "Back",
     "close": "Close",
+    "abort": "Abort",
     "table": {
       "pagination": {
         "items_per_page": {
