--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -221,9 +221,15 @@
       "text_collaborative_tx_disabled": "Payment without privacy improvement"
     },
     "coinjoin_precondition": {
-      "hint_missing_utxos": "To execute a collaborative transaction you need at least one UTXO with <2>{{ minConfirmations }}</2> confirmations in the source jar. Select another jar to send from or fund this jar and wait for <6>{{ minConfirmations }}</6> blocks.",
-      "hint_missing_confirmations": "A collaborative transaction requires one of your UTXOs to have <2>{{ minConfirmations }}</2> or more confirmations. Select another jar to send from or wait for <6>{{ amountOfMissingConfirmations }}</6> more block(s).",
-      "hint_missing_overall_retries": "You've tried executing a collaborative transaction from this jar unsuccessfully too many times in a row. For security reasons, you need a fresh UTXO to try again. See <2>the docs</2> for more information."
+      "hint_missing_utxos": "To execute a collaborative transaction you need UTXOs with {{ minConfirmations }} or more confirmations in the source jar. $t(send.coinjoin_precondition.nested_hint_fund_jar, {\"count\": {{ minConfirmations }} })",
+      "hint_missing_confirmations": "A collaborative transaction requires your UTXOs to have {{ minConfirmations }} or more confirmations. $t(send.coinjoin_precondition.nested_hint_wait_for_block, {\"count\": {{ amountOfMissingConfirmations }} })",
+      "hint_missing_retries": "Failed at sourcing commitments for this jar too many times in a row. For security reasons, you need a fresh UTXO in the jar to try again. See <1>the docs</1> for more information.",
+      "hint_missing_retries_detail_one": "The following UTXO has been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "hint_missing_retries_detail_other": "The following {{ count }} UTXOs have been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "nested_hint_wait_for_block": "Select another jar to send from or wait for one more block.",
+      "nested_hint_wait_for_block_other": "Select another jar to send from or wait for {{ count }} more blocks.",
+      "nested_hint_fund_jar": "Select another jar to send from or fund this jar and wait for one block.",
+      "nested_hint_fund_jar_other": "Select another jar to send from or fund this jar and wait for {{ count }} blocks."
     }
   },
   "receive": {
@@ -454,9 +460,15 @@
     "progress_current_state": "Waiting for transaction <1>{{ current }}</1> of <3>{{ total }}</3> to process...",
     "progress_done": "All transactions completed successfully. The scheduler will stop soon.",
     "precondition": {
-      "hint_missing_utxos": "To run the scheduler you need at least one UTXO with <2>{{ minConfirmations }}</2> confirmations in Jar A. Fund your wallet and wait for <6>{{ minConfirmations }}</6> blocks.",
-      "hint_missing_confirmations": "The scheduler requires one of your UTXOs in Jar A to have <2>{{ minConfirmations }}</2> or more confirmations. Wait for <6>{{ amountOfMissingConfirmations }}</6> more block(s).",
-      "hint_missing_overall_retries": "You've tried running the scheduler unsuccessfully too many times in a row. For security reasons, you need a fresh UTXO in Jar A to try again. See <2>the docs</2> for more information."
+      "hint_missing_utxos": "To run the scheduler you need UTXOs with {{ minConfirmations }} or more confirmations. $t(scheduler.precondition.nested_hint_fund_wallet, {\"count\": {{ minConfirmations }} })",
+      "hint_missing_confirmations": "The scheduler requires your UTXOs to have {{ minConfirmations }} or more confirmations. $t(scheduler.precondition.nested_hint_wait_for_block, {\"count\": {{ amountOfMissingConfirmations }} })",
+      "hint_missing_retries": "Failed at sourcing commitments too many times. For security reasons, you need a fresh UTXO in the jar to try again. See <1>the docs</1> for more information.",
+      "hint_missing_retries_detail_one": "The following UTXO has been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "hint_missing_retries_detail_other": "The following {{ count }} UTXOs have been used unsuccessfully too many times and cannot be reused: <1></1>",
+      "nested_hint_wait_for_block": "Wait for one more block.",
+      "nested_hint_wait_for_block_other": "Wait for {{ count }} more blocks.",
+      "nested_hint_fund_wallet": "Fund your wallet and wait for one more block.",
+      "nested_hint_fund_wallet_other": "Fund your wallet and wait for {{ count }} more blocks."
     }
   },
   "modal": {
