fix(settings): consistent case

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -143,8 +143,8 @@
     "title": "Settings",
     "section_title_wallet": "Wallet",
     "section_title_community": "Community",
-    "show_balance": "Show Balance",
-    "hide_balance": "Hide Balance",
+    "show_balance": "Show balance",
+    "hide_balance": "Hide balance",
     "use_sats": "Display amounts in sats",
     "use_btc": "Display amounts in bitcoin",
     "use_dark_theme": "Switch to dark theme",
