feat(jar): show sum of selected utxos (#514)
* refactor(utxo): disable refresh button while loading

* fix(utxos): reset select state when switching jars

* refactor(utxo-list): store utxos/selectedUtxos in distinct vars

* fix(utxo-list): improve padding across all screens

* refactor(utxo-list): externalize UtxoDetailModal

* feat(utxo-list): show sum of selected utxos

* ui(utxo-list): change order of sum/button elements on mobile

* ui(utxo-list): align selected utxo sum to the right

* fix(utxo-list): wording

Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -482,13 +482,14 @@
   },
   "jar_details": {
     "title_tab_utxos": "UTXOs",
-    "title_tab_account": "Jar Details",
+    "title_tab_account": "Details",
     "utxo_list": {
       "title_zero": "No UTXOs in Jar {{ jar }}",
       "title_one": "{{ count }} UTXO in Jar {{ jar }}",
       "title_other": "{{ count }} UTXOs in Jar {{ jar }}",
-      "button_freeze": "Freeze selected",
-      "button_unfreeze": "Unfreeze selected",
+      "text_balance_sum_selected": "<0></0> selected",
+      "button_freeze": "Freeze",
+      "button_unfreeze": "Unfreeze",
       "button_freeze_loading": "Freezing...",
       "button_unfreeze_loading": "Unfreezing...",
       "utxo_tag_frozen": "frozen",
